--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
         body { margin: 0; display: flex; flex-direction: column; align-items: center; background: #f0f0f0; }
         #game-container { margin-top: 20px; }
         button { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+        #game-container {
+            margin: 20px auto;
+            padding: 10px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        
+        .tile:hover {
+            background: #e0e0e0 !important;
+        }
+        
+     /* index.html 添加的样式 */
+#game-container {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+}
+.tile {
+    position: absolute;
+    will-change: transform; /* 优化动画性能 */
+}
     </style>
 </head>
 <body>
     <div id="game-container"></div>
-    <button onclick="shuffleTiles()">重新开始</button>
-    <script src="https://pixijs.download/v7.2.4/pixi.min.js"></script>
+    <button onclick="initPuzzle()">重新开始</button>
     <script src="game.js"></script>
 </body>
 </html>
