--- a/index.html
+++ b/index.html
@@ -3,32 +3,41 @@
 <head>
     <title>数字华容道</title>
     <style>
-        body { margin: 0; display: flex; flex-direction: column; align-items: center; background: #f0f0f0; }
-        #game-container { margin-top: 20px; }
-        button { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+        body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: #f0f0f0;
+        }
+
         #game-container {
             margin: 20px auto;
             padding: 10px;
+            width: 300px;
+            height: 300px;
+            position: relative;
+            overflow: hidden;
             background: #fff;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        
+
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .tile {
+            position: absolute;
+            will-change: transform; /* 优化动画性能 */
+        }
+
         .tile:hover {
             background: #e0e0e0 !important;
         }
-        
-     /* index.html 添加的样式 */
-#game-container {
-    width: 300px;
-    height: 300px;
-    position: relative;
-    overflow: hidden;
-}
-.tile {
-    position: absolute;
-    will-change: transform; /* 优化动画性能 */
-}
     </style>
 </head>
 <body>
